# advent-of-code

./: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
2024/day_01/: solution.py  test_solution.py
2024/day_02/: solution.py  test_solution.py
2024/day_03/: solution.py  test_solution.py
2024/day_04/: solution.py  test_solution.py
2024/day_05/: solution.py  test_solution.py
2024/day_06/: solution.py  test_solution.py
2024/day_07/: solution.py  test_solution.py
2024/day_08/: solution.py  test_solution.py
2024/day_09/: solution.py  test_solution.py
2024/day_10/: solution.py  test_solution.py
2024/day_11/: solution.py  test_solution.py
2024/day_12/: solution.py  test_solution.py
2024/day_13/: solution.py  test_solution.py
2024/day_14/: solution.py  test_solution.py
2025/day_01/: solution.py  test_solution.py
2025/day_02/: solution.py  test_solution.py
2025/day_03/: solution.py  test_solution.py
2025/day_04/: solution.py  test_solution.py
2025/day_05/: small_input.txt  solution.py  test_solution.py
2025/day_06/: solution.py  test_solution.py
2025/day_07/: solution.py  test_solution.py
