[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code 2024 solutions"
requires-python = ">=3.12"
dependencies = [
    "ipython==8.30.0",
    "ruff==0.8.1",
    "pre-commit==4.0.1",
    "pytest>=8.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pandas>=2.3.3",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Allow module names starting with numbers (for year directories like 2024, 2025)
    "E501",  # Don't enforce line length for long comments
    "N806",  # Allow uppercase variable names (common for matrices in numpy)
]

